--- a/TransportationsProject/Code/Modules/TransportDetail/View/Cell/TransportDetailTableViewCell.xib
+++ b/TransportationsProject/Code/Modules/TransportDetail/View/Cell/TransportDetailTableViewCell.xib
@@ -19,24 +19,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eLs-Fn-mJK">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eLs-Fn-mJK">
                         <rect key="frame" x="16" y="8" width="288" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nSJ-jl-xuv">
-                        <rect key="frame" x="8" y="36.5" width="304" height="113"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="nSJ-jl-xuv">
+                        <rect key="frame" x="8" y="52.5" width="304" height="97"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QIH-3r-wwV">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="23.5" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="KnY-FM-FJj"/>
                                     <constraint firstAttribute="height" constant="50" id="u4S-kZ-GsZ"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7q1-sd-AqG">
-                                <rect key="frame" x="58" y="0.0" width="246" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7q1-sd-AqG">
+                                <rect key="frame" x="74" y="38.5" width="230" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -49,7 +49,7 @@
                     <constraint firstAttribute="trailing" secondItem="nSJ-jl-xuv" secondAttribute="trailing" constant="8" id="Sev-Wy-ZZl"/>
                     <constraint firstAttribute="trailing" secondItem="eLs-Fn-mJK" secondAttribute="trailing" constant="16" id="ca8-rl-jea"/>
                     <constraint firstItem="nSJ-jl-xuv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="hk9-M7-aaj"/>
-                    <constraint firstItem="nSJ-jl-xuv" firstAttribute="top" secondItem="eLs-Fn-mJK" secondAttribute="bottom" constant="8" id="rmt-Kq-ZuK"/>
+                    <constraint firstItem="nSJ-jl-xuv" firstAttribute="top" secondItem="eLs-Fn-mJK" secondAttribute="bottom" constant="24" id="rmt-Kq-ZuK"/>
                     <constraint firstItem="eLs-Fn-mJK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="sjk-SB-bUU"/>
                     <constraint firstAttribute="bottom" secondItem="nSJ-jl-xuv" secondAttribute="bottom" id="zQ5-cZ-uJQ"/>
                 </constraints>
